--- a/pruebita/sistema/templates/sistema/registro.html
+++ b/pruebita/sistema/templates/sistema/registro.html
@@ -39,7 +39,7 @@
         {% endif %}
 	
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('{% static "sistema/images/bg-01.jpg" %}');">
+		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100">
 				<form class="login100-form validate-form" method="post">
 					{% csrf_token %}
